k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tienda-backend
  namespace: tienda
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tienda-backend
  template:
    metadata:
      labels:
        app: tienda-backend
    spec:
      containers:
        - name: backend
          image: 268450856324.dkr.ecr.us-east-1.amazonaws.com/tienda-backend:latest # Account ID 268450856324. El pipeline la sobrescribe con `kubectl set image`.
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          # HEALTH CHECKS (PROBES)
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
