k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tienda-frontend
  namespace: tienda
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tienda-frontend
  template:
    metadata:
      labels:
        app: tienda-frontend
    spec:
      containers:
        - name: frontend
          image: 618629205592.dkr.ecr.us-east-1.amazonaws.com/tienda-frontend:latest # Account ID 618629205592. El pipeline la sobrescribe con `kubectl set image`.
          ports:
            - containerPort: 80

          # Se agrega Resource para que Metrics Server calcule el % de CPU y Memoria para escalar 
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          # HEALTH CHECKS
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
