k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tienda-db
  namespace: tienda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tienda-db
  template:
    metadata:
      labels:
        app: tienda-db
    spec:
      containers:
        - name: mysql
          image: 618629205592.dkr.ecr.us-east-1.amazonaws.com/tienda-db:latest # Account ID 618629205592. El pipeline la sobrescribe con `kubectl set image`.
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          emptyDir: {}
